--- a/package.json
+++ b/package.json
@@ -22,25 +22,34 @@
     "@angular/router": "^7.2.2",
     "@ionic-native/call-number": "^5.10.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/facebook": "^5.11.0",
     "@ionic-native/google-plus": "^5.10.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
+    "@ionic/storage": "^2.2.0",
     "@ngtools/webpack": "^1.2.4",
     "angularfire2": "^5.2.1",
     "call-number": "1.0.1",
     "cordova-android": "7.1.4",
     "cordova-browser": "^6.0.0",
+    "cordova-plugin-browsertab": "0.2.0",
+    "cordova-plugin-buildinfo": "2.0.3",
+    "cordova-plugin-compat": "1.2.0",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-facebook4": "^5.0.0",
     "cordova-plugin-googleplus": "^7.0.2",
+    "cordova-plugin-inappbrowser": "3.1.0",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^4.1.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-universal-links-plugin": "1.2.1",
     "core-js": "^2.5.4",
     "firebase": "^6.3.1",
     "ionic-angular": "^3.9.8",
+    "mx.ferreyra.callnumber": "0.0.2",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.29"
@@ -85,7 +94,18 @@
       "mx.ferreyra.callnumber": {},
       "cordova-plugin-googleplus": {
         "WEB_APPLICATION_CLIENT_ID": "130563067105-h8dq4sb28vut2s7t7jev7duda5ec9a77.apps.googleusercontent.com"
-      }
+      },
+      "cordova-plugin-facebook4": {
+        "APP_ID": "515296989238419",
+        "APP_NAME": "Beerdrum",
+        "FACEBOOK_HYBRID_APP_EVENTS": "false",
+        "FACEBOOK_ANDROID_SDK_VERSION": "5.0.2"
+      },
+      "cordova-plugin-buildinfo": {},
+      "cordova-universal-links-plugin": {},
+      "cordova-plugin-browsertab": {},
+      "cordova-plugin-inappbrowser": {},
+      "call-number": {}
     },
     "platforms": [
       "android"
